--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -1,2 +1,7 @@
-%h1 This is the Home Page
+%h1 
+ This is the Home Page
 = link_to "Privacy Policy", privacy_policy_path
+
+= link_to courses_path, class:"btn btn-success" do
+ .fa.fa-book
+ Courses
