--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,8 @@
     %link{:crossorigin => "anonymous", :href => "https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css", :integrity => "sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65", :rel => "stylesheet"}/
     %script{:crossorigin => "anonymous", :integrity => "sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4", :src => "https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"}
     %link{:crossorigin => "anonymous", :href => "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css", :integrity => "sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==", :referrerpolicy => "no-referrer", :rel => "stylesheet"}/
+    %link{:href => "https://unpkg.com/trix@2.0.0/dist/trix.css", :rel => "stylesheet", :type => "text/css"}/
+    %script{:src => "https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js", :type => "text/javascript"}
   %body
     %i.fa-solid.fa-house
     = yield
